Added a timer to the game!

--- a/MatchGame/MainWindow.xaml
+++ b/MatchGame/MainWindow.xaml
@@ -13,7 +13,7 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        
+
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -21,43 +21,46 @@
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+
+        <TextBlock HorizontalAlignment="Center"
+                   Text="?" VerticalAlignment="Center" FontSize="36" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
+                   Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="2" HorizontalAlignment="Center"
+                   Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Center"
+                   Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+
+        <TextBlock HorizontalAlignment="Center"
+                   Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
+                   Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="2" HorizontalAlignment="Center"
+                   Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Center"
+                   Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+
+        <TextBlock HorizontalAlignment="Center"
+                   Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
+                   Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="2" HorizontalAlignment="Center"
+                   Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Center"
+                   Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+
+
+        <TextBlock HorizontalAlignment="Center"
+                   Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
+                   Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="2" HorizontalAlignment="Center"
+                   Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
+        <TextBlock Grid.Column="3" HorizontalAlignment="Center"
+                   Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36" MouseDown = "TextBlock_MouseDown"/>
         
-        <TextBlock HorizontalAlignment="Center"
-                   Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
-                   Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="2" HorizontalAlignment="Center"
-                   Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="3" HorizontalAlignment="Center"
-                   Text="?" VerticalAlignment="Center" FontSize="36"/>
-
-        <TextBlock HorizontalAlignment="Center"
-                   Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
-                   Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="2" HorizontalAlignment="Center"
-                   Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="3" HorizontalAlignment="Center"
-                   Grid.Row="1" Text="?" VerticalAlignment="Center" FontSize="36"/>
-
-        <TextBlock HorizontalAlignment="Center"
-                   Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
-                   Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="2" HorizontalAlignment="Center"
-                   Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="3" HorizontalAlignment="Center"
-                   Grid.Row="2" Text="?" VerticalAlignment="Center" FontSize="36"/>
-
-
-        <TextBlock HorizontalAlignment="Center"
-                   Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
-                   Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="2" HorizontalAlignment="Center"
-                   Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36"/>
-        <TextBlock Grid.Column="3" HorizontalAlignment="Center"
-                   Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36"/>
+        <TextBlock x:Name="timeTextBlock" HorizontalAlignment="Center" Grid.Row="4" 
+                   TextWrapping="Wrap" Text="Elapsed Time" VerticalAlignment="Center" FontSize="36" Grid.ColumnSpan="4" MouseDown="timeTextBlock_MouseDown"/>
 
     </Grid>
 </Window>
